--- a/pw/src/app/app.component.html
+++ b/pw/src/app/app.component.html
@@ -1,30 +1,54 @@
-<h1>Password Generator</h1>
+<div class="container">
+  <div class="columns is-centered">
+    <div class="box column is-one-third">
+      <h1 class="title has-text-centered">Password Generator</h1>
 
-<div>
-  <label>Enter Length</label>
-  <input (input)="onChangeLength($event)" />
-</div>
+      <div class="field">
+        <label>Length</label>
+        <input class="input" (input)="onChangeLength($event)" />
+      </div>
 
-<div>
-  <label>Use Letters</label>
-  <input (input)="onChangeLetters($event)" type="checkbox" />
-</div>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (input)="onChangeLetters($event)" type="checkbox" />
+            Use Letters
+          </label>
+        </div>
+      </div>
 
-<div>
-  <label>Use Numbers</label>
-  <input (input)="onChnageNumbers($event)" type="checkbox" />
-</div>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (input)="onChangeNumbers($event)" type="checkbox" />
+            Use Numbers
+          </label>
+        </div>
+      </div>
 
-<div>
-  <label>Use Symbols</label>
-  <input (input)="onChangeSymbols($event)" type="checkbox" />
-</div>
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (input)="onChangeSymbols($event)" type="checkbox" />
+            Use Symbols
+          </label>
+        </div>
+      </div>
 
-<div>
-  <button [disabled]="!length" (click)="onButtonClick()">Generate</button>
-</div>
+      <button
+        [disabled]="
+          !(length && (includeLetters || includeSymbols || includeNumbers))
+        "
+        (click)="onButtonClick()"
+        class="button is-link is-fullwidth"
+      >
+        Generate!
+      </button>
 
-<div>
-  <label>Your Password</label>
-  <input type="text" [value]="getPassword()" />
+      <div class="box" *ngIf="password">
+        <label>Your Password</label>
+        <input class="input" [value]="password" />
+      </div>
+    </div>
+  </div>
 </div>
