--- a/comps/src/app/elements/elements-home/elements-home.component.html
+++ b/comps/src/app/elements/elements-home/elements-home.component.html
@@ -1,3 +1,2 @@
-<h1>Placeholder Component</h1>
-<div class="ui divider"></div>
+<app-divider> Customize here~ </app-divider>
 <app-placeholder [header]="true" [lines]="3"></app-placeholder>
