--- a/comps/src/app/elements/elements-home/elements-home.component.html
+++ b/comps/src/app/elements/elements-home/elements-home.component.html
@@ -1,2 +1,10 @@
-<app-divider> Customize here~ </app-divider>
+<app-divider> Element Component </app-divider>
 <app-placeholder [header]="true" [lines]="3"></app-placeholder>
+<app-divider> Segment</app-divider>
+<app-segment>
+  <header>
+    <i class="pdf file outline icon"></i>
+    No documents are listed for this customer.
+  </header>
+  <div class="ui primary button">Add Document</div>
+</app-segment>
