--- a/mathForm/src/app/equation/equation.component.css
+++ b/mathForm/src/app/equation/equation.component.css
@@ -27,5 +27,8 @@ input:focus {
 }
 
 .close {
-  background-color: rgba(255, 235, 60 0.3);
+  background-color: rgba(255, 235, 60, 0.3);
+}
+.off {
+  background-color: rgb(250, 6, 6);
 }
